# stock-analysis

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  AI_TRADING_PLAN.md  API_REFERENCE.md  API_TESTING_GUIDE.md  BOT_CLI_GUIDE.md  CLEANUP_PLAN.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_ENVIRONMENTS.md  DEPLOYMENT_SUCCESS.md  DEVELOPMENT.md  Dockerfile  GLOSSARY.md  Makefile  PLAN.md  PROJECT_STATUS.md  README.md  SCHEDULE_OPTIMIZATION.md  TESTING_STRATEGY.md  TODO.md  TRIGGER_DEV_WORKFLOW.md  TRIGGER_ENHANCEMENT_PLAN.md  TRIGGER_EXAMPLES.md  TRIGGER_SCHEDULES.md  alembic.ini  alert_manager.py  cleanup_old_files.py  debug_env.py  drizzle.config.ts  main_app.py  master_stock_analyzer.py  migrate.py  package-lock.json  package.json  pnpm-lock.yaml  portfolio_manager.py  (+20 more)
.githooks/: post-push
.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace
.obsidian/: workspace.json
archive/: IMPROVEMENT_ROADMAP.md
docs/: TESTING_STRATEGY.md
output/: llm_prompt_2025-06-13.txt
prisma/: schema.prisma
scripts/: alert_manager.py  check-database.ts  demo_ai_trading.py  generate-types.ts  main_app.py  master_stock_analyzer.py  migrate.py  portfolio_manager.py  run_api.py  setup-git-hooks.sh  start_local_api.sh  test-ai-trading.sh  test-alpaca-endpoints.sh  test-ci-locally.sh  test-health-check.sh  test-single-task.js  test_api_curl.sh  test_api_endpoints.py  test_conversation_endpoints.py  test_db_connection.py  (+6 more)
(+215 files in other folders)
